# HoverGamesContests

./: CMakeLists.txt  HDIB-HGDrone-holder_v3.stl  HoverGamesMission.cpp  HoverTakeOff.cpp  Pixy2_stand_v1.STL  README.md  README.txt  hovergames  imx_base.SLDPRT  index.md  mainpage.md  pixy2.SLDPRT  rapid_iot_k64f_test1_hello_world.axf
HovergamesApplicationMap/: build.gradle  settings.gradle
HovergamesApplicationMap/app/: build.gradle
HovergamesApplicationMap/app/src/androidTest/java/com/example/hovergamesapplicationmap/: ExampleInstrumentedTest.java
HovergamesApplicationMap/app/src/main/: AndroidManifest.xml
HovergamesApplicationMap/app/src/main/java/com/example/hovergamesapplicationmap/: MainActivity.java
HovergamesApplicationMap/app/src/main/res/layout/: activity_main.xml
HovergamesApplicationMap/app/src/main/res/values/: strings.xml  themes.xml
HovergamesApplicationMap/app/src/main/res/values-night/: themes.xml
HovergamesApplicationMap/gradle/wrapper/: gradle-wrapper.properties
examples/a53/: aarch64-gnu.toolchain.cmake
examples/a53/mavsdk_example/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mavshell
examples/a53/opencv/cross/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  opencv_cross_a53.cpp
examples/a53/opencv/gitbook/: CMakeLists.txt  opencv_cross.cpp
examples/a53/threads/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mutex  threads.cpp
examples/mavsdk/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hg_test.cpp  mavsdk  mission.plan
examples/simulink/: HG_SM.slx  HG_SM.slxc  hovergames.slx  hovergames.slxc
examples/simulink/HG_SM_ert_rtw/: HG_SM.cpp  HG_SM.h  HG_SM.mk  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  defines.txt  ert_main.cpp  modelsources.txt  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat  zero_crossing_types.h
examples/simulink/HG_SM_ert_rtw/tmwinternal/: simulink_cache.xml
examples/simulink/slprj/_cgxe/HG_SM/: HG_SM_Cache.mat
examples/simulink/slprj/_jitprj/: jitEngineAccessInfo.mat  n34KZDGcbZSNh4byOjt05B.l  n34KZDGcbZSNh4byOjt05B.mat  snsIvAlbvdTgbrtkacxnCx.l  snsIvAlbvdTgbrtkacxnCx.mat
examples/simulink/slprj/_sfprj/EMLReport/: emlReportAccessInfo.mat  snsIvAlbvdTgbrtkacxnCx.mat
examples/simulink/slprj/_sfprj/HG_SM/: amsi_serial.mat
examples/simulink/slprj/_sfprj/HG_SM/_self/sfun/info/: binfo.mat
examples/simulink/slprj/_sfprj/precompile/: NGwUlnddoYlVC3RmkDL3zG.mat  autoInferAccessInfo.mat  mwBFkZ9yJPuFbKTOOSq2s.mat
examples/simulink/slprj/ert/HG_SM/tmwinternal/: CompileInfo.xml  binfo.mat  minfo.mat  scv  tr
examples/simulink/slprj/ert/_sharedutils/: shared_file.dmr
examples/simulink/slprj/sim/varcache/HG_SM/: checksumOfCache.mat  varInfo.mat
examples/simulink/slprj/sim/varcache/HG_SM/tmwinternal/: simulink_cache.xml
examples/simulink/slprj/sim/varcache/hovergames/: checksumOfCache.mat  varInfo.mat
examples/simulink/slprj/sim/varcache/hovergames/tmwinternal/: simulink_cache.xml
include/: ActionHandler.hpp  CameraHandler.hpp  GpsHandler.hpp  IFrameOutput.hpp  IFrameReader.hpp  MissionHandler.hpp  ResultHandler.hpp  TelemetryHandler.hpp  Types.hpp  Utilities.hpp  VideoReader.hpp  VideoWriter.hpp  hovergames.h  navqcontrol.h
mavlinkGenerated/common/: common.h  mavlink_msg_hover_games_status.h  testsuite.h
mavlinkGenerated/message_definitions/: common.xml
qt_filter/: data.hpp  filter.hpp  filter_order1.h  filter_order5.h  main.cpp  splinechart.pro
src/: ActionHandler.cpp  CameraHandler.cpp  GpsHandler.cpp  MissionHandler.cpp  ResultHandler.cpp  TelemetryHandler.cpp  Utilities.cpp  VideoReader.cpp  VideoWriter.cpp  hovergames.cpp  navqcontrol.cpp
(+3 files in other folders)
