cmake_minimum_required (VERSION 3.15)
PROJECT(open_cross_a53)
set(CMAKE_SYSTEM_PROCESSOR aarch64)
set(CMAKE_SYSTEM_NAME Linux)
FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(Qt5 REQUIRED COMPONENTS Core Gui Widgets Test Concurrent)
include_directories(${OpenCV_INCLUDE_DIRS} ${Qt5_INCLUDE_DIRS})
link_directories(${OpenCV_LIB_DIR} ${Qt5_LIB_DIR})
ADD_EXECUTABLE(${PROJECT_NAME} opencv_cross_a53.cpp)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OpenCV_LIBS} ${Qt5_LIBS})
